<resources>
    <string name="app_name">Nonton Yuk</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title_activity_detail_tv_show">Detail TV Show</string>

    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="date">Date</string>
    <string name="user_score">User Score</string>
    <string name="user_score_value">User Score %1$d</string>
    <string name="description">Description</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="menu_favorite">favorite</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>